new favicon. "hi im kida" now

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -103,9 +103,9 @@
           <div class="row">
             <div class="col-12 text-center">
               <h1 class="heading">
-                <span>Hi, <img class="rounded-pill" src="assets/images/author-sm.jpg" alt="*"> I'm Mogen</span>
-                <span>digital designer</span>
-                <span>based in <img src="assets/images/country.jpg" alt="*"> Belgium</span>
+                <span><img class="rounded-pill" src="assets/images/author-sm.jpg" alt="*"> I'm Kida, </span>
+                <span>a UX & UI designer </span>
+                <span>based in Stockholm</span>
               </h1>
             </div>
           </div>
