--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -126,11 +126,11 @@
                 <div class="col-md-6">
                   <a class="project-block d-block text-reset" data-color="#f3e0d8" href="project-single.html">
                     <div class="project-image rounded overflow-hidden">
-                      <img class="w-100 rounded" src="assets/images/projects/01.jpg" alt="">
+                      <img class="w-100 rounded" src="assets/images/projects/Bantaba.png" alt="#">
                     </div>
                     <div class="project-content d-flex align-items-center justify-content-between mt-4">
                       <div>
-                        <h3 class="mb-1">Soul Whisperer</h3>
+                        <h3 class="mb-1">Bantaba's Landing Page</h3>
                         <p class="mb-0">Consectetur adipisicing elitic dolorum</p>
                       </div>
                       <div class="icon ms-4">
