--- a/portfolio/services.html
+++ b/portfolio/services.html
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-md px-0 py-3 py-lg-4">
           <!-- navbar logo -->
           <a class="navbar-brand font-weight-bold mb-0" href="index.html" title="Mogen">
-            <img src="assets/images/logo.png" alt="Mogen">
+            <!-- <img src="assets/images/logo.png" alt="Mogen"> -->Kida
           </a>
   
           <!-- navbar-toggler -->
@@ -104,12 +104,12 @@
               <div class="text-center">
                 <p class="small text-uppercase mb-4">Brand & Design</p>
                 <div class="section-title text-center">
-                  <h1 class="title">Services</h1>
+                  <h1 class="title">My Skills</h1>
                 </div>
               </div>
 
               <div class="rotate-circle">
-                <svg class="rotateOnScroll circle-text bg-dark" viewBox="0 0 460 460"><defs><path id="circle-button-text" d="M230,380 a150,150 0 0,1 0,-300a150,150 0 0,1 0,300Z"></path></defs><text class="text-uppercase" style="font-size:40px;letter-spacing:7px"><textPath fill="white" href="#circle-button-text">Brand — & — Design — Services — </textPath></text></svg>
+                <svg class="rotateOnScroll circle-text bg-dark" viewBox="0 0 460 460"><defs><path id="circle-button-text" d="M230,380 a150,150 0 0,1 0,-300a150,150 0 0,1 0,300Z"></path></defs><text class="text-uppercase" style="font-size:40px;letter-spacing:7px"><textPath fill="white" href="#circle-button-text">What I enjoy working with -----</textPath></text></svg>
               </div>
             </div>
           </div>
@@ -132,7 +132,7 @@
                       <path d="M14 12.4V3.6C14 3.26863 14.2686 3 14.6 3H20.4C20.7314 3 21 3.26863 21 3.6V12.4C21 12.7314 20.7314 13 20.4 13H14.6C14.2686 13 14 12.7314 14 12.4Z" stroke="currentColor" stroke-width="1"/>
                       <path d="M3 20.4V11.6C3 11.2686 3.26863 11 3.6 11H9.4C9.73137 11 10 11.2686 10 11.6V20.4C10 20.7314 9.73137 21 9.4 21H3.6C3.26863 21 3 20.7314 3 20.4Z" stroke="currentColor" stroke-width="1"/>
                     </svg>
-                    <h3 class="mt-4 mb-2 h4">UI/UX Design</h3>
+                    <h3 class="mt-4 mb-2 h4">UX & UI Design</h3>
                     <p>UI/UX Design generally refers to the visual layout of the elements.</p>
                   </div>
                 </div>
@@ -145,7 +145,8 @@
                       <path d="M14 20.4V14.6C14 14.2686 14.2686 14 14.6 14H20.4C20.7314 14 21 14.2686 21 14.6V20.4C21 20.7314 20.7314 21 20.4 21H14.6C14.2686 21 14 20.7314 14 20.4Z" stroke="currentColor" stroke-width="1"/>
                       <path d="M3 20.4V14.6C3 14.2686 3.26863 14 3.6 14H9.4C9.73137 14 10 14.2686 10 14.6V20.4C10 20.7314 9.73137 21 9.4 21H3.6C3.26863 21 3 20.7314 3 20.4Z" stroke="currentColor" stroke-width="1"/>
                     </svg>
-                    <h3 class="mt-4 mb-2 h4">Website Design</h3>
+                    <h3 class="mt-4 mb-2 h4">
+                      UX Research</h3>
                     <p>On the web, front-end code tells our browser what to do & not to do.</p>
                   </div>
                 </div>
@@ -157,7 +158,7 @@
                       <path d="M12 16.01L12.01 15.9989" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
                       <path d="M7 19.4V4.6C7 4.26863 7.26863 4 7.6 4H16.4C16.7314 4 17 4.26863 17 4.6V19.4C17 19.7314 16.7314 20 16.4 20H7.6C7.26863 20 7 19.7314 7 19.4Z" stroke="currentColor" stroke-width="1"/>
                     </svg>
-                    <h3 class="mt-4 mb-2 h4">App Design</h3>
+                    <h3 class="mt-4 mb-2 h4">Responsive & Accessible Design</h3>
                     <p>App design combines the user interface (UI) and user experience (UX).</p>
                   </div>
                 </div>
