--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -121,7 +121,7 @@
               <div class="section-title mb-4">
                 <h2 class="title">How can I help you?</h2>
               </div>
-              <p class="lead">As a Digital Designer, I am here to make you stand out in the digital world. The combination of my passion for design and your vision will ensure a great end result.</p>
+              <p class="lead">I strive to design clean looking applications that are easy to use and accessible for everyone.</p>
               <div class="mt-5 d-none d-xl-block">
                 <a class="btn" href="services.html">Services</a>
               </div>
@@ -177,7 +177,7 @@
                 </div>
                 
                 <!-- service-item -->
-                <div class="col-xl-6 col-lg-4 col-sm-6">
+                <!-- <div class="col-xl-6 col-lg-4 col-sm-6">
                   <div class="service-item-sm rounded-sm bg-white font-weight-500 position-relative h-100">
                     <svg class="icon position-absolute" width="20" height="20" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 14V6M14 14L20.1023 17.487C20.5023 17.7156 21 17.4268 21 16.9661V3.03391C21 2.57321 20.5023 2.28439 20.1023 2.51296L14 6M14 14H7C4.79086 14 3 12.2091 3 10V10C3 7.79086 4.79086 6 7 6H14" stroke="currentColor" stroke-width="1.5"/>
@@ -185,11 +185,11 @@
                     </svg>                
                     <span class="d-inline-block">Branding</span>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="col-lg-12 d-block d-xl-none">
-              <a class="btn mt-2" href="services.html">Services</a>
+              <a class="btn mt-2" href="services.html">My Skills</a>
             </div>
           </div>
         </div>
