my name on all sites

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-md px-0 py-3 py-lg-4">
           <!-- navbar logo -->
           <a class="navbar-brand font-weight-bold mb-0" href="index.html" title="Mogen">
-            <img src="assets/images/logo.png" alt="Mogen">
+            <!-- <img src="assets/images/logo.png" alt="Mogen"> -->Kida
           </a>
   
           <!-- navbar-toggler -->
