--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -124,7 +124,7 @@
             <div class="col-lg-10">
               <div class="row justify-content-between g-6 project-page">
                 <div class="col-md-6">
-                  <a class="project-block d-block text-reset" data-color="#E8FCF0" href="project-single.html">
+                  <a class="project-block d-block text-reset" data-color="#E8FCF0" href="bantaba-landingPage.html">
                     <div class="project-image rounded overflow-hidden">
                       <img class="w-100 rounded" src="assets/images/projects/Bantaba.png" alt="#">
                     </div>
