--- a/portfolio/project-single.html
+++ b/portfolio/project-single.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <!-- title -->
-  <title>Mogen - Portfolio HTML Template</title>
-
+  <title>Kida's Portfolio</title>
+  
   <!--favicon-->
   <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
