--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -103,7 +103,9 @@
           <div class="row">
             <div class="col-12 text-center">
               <h1 class="heading">
-                <span><img class="rounded-pill" src="assets/images/author-sm.jpg" alt="*"> I'm Kida, </span>
+                <span>
+                  <!-- <img class="rounded-pill" src="assets/images/author-sm.jpg" alt="*">  -->
+                  I'm Kida, </span>
                 <span>a UX & UI designer </span>
                 <span>based in Stockholm</span>
               </h1>
@@ -209,13 +211,13 @@
               <div class="swiper swiper-projects">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <div class="project-block" data-color="#f3e0d8">
+                    <div class="project-block" data-color="#E8FCF0">
                       <div class="project-image rounded overflow-hidden">
-                        <img class="w-100 rounded" src="assets/images/projects/01.jpg" alt="">
+                        <img class="w-100 rounded" src="assets/images/projects/Bantaba.png" alt="Cover">
                       </div>
-                      <a class="project-content d-flex align-items-center justify-content-between mt-4 text-reset" href="project-single.html">
+                      <a class="project-content d-flex align-items-center justify-content-between mt-4 text-reset" href="bantaba-landingPage.html">
                         <div>
-                          <h3 class="mb-1">Soul Whisperer</h3>
+                          <h3 class="mb-1">Bantaba's Landing Page</h3>
                           <p class="mb-0">Consectetur adipisicing elitic dolorum</p>
                         </div>
                         <div class="icon ms-4">
@@ -328,8 +330,8 @@
       </section>
       <!-- end of projects -->
       
-      <!-- start of projects -->
-      <section class="section border-top border-color">
+      <!-- start of clients -->
+      <!-- <section class="section border-top border-color">
         <div class="container">
           <div class="row">
             <div class="col-12 mb-6">
@@ -378,7 +380,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- end of projects -->
 
       <!-- start of cta -->
@@ -400,15 +402,16 @@
 <!-- start of footer -->
 <footer>
   <div class="container bg-light-soft">
-    <div class="block" style="background-image:url(assets/images/footer-bg.jpg)">
+    <!-- <div class="block" style="background-image:url(assets/images/footer-bg.jpg)"> -->
+      <div class="block" style="background: #73B590;">
       <div class="row gx-0 gx-md-4 gy-4 justify-content-center">
         <div class="col-lg-5 text-center text-lg-start order-1 order-lg-0">
           <ul class="list-inline mb-3">
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Facebook</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Twitter</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Instagram</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="https://www.linkedin.com/in/kida-bohman/">LinkedIn</a></li>
+            <!-- <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Twitter</a></li> -->
+            <!-- <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Instagram</a></li> -->
           </ul>
-          <p class="small">&copy; Copyright, Riazz Mogen</p>
+          <!-- <p class="small">&copy; Copyright, Riazz Mogen</p> -->
         </div>
         <div class="col-lg-5 text-center text-lg-end order-0 order-lg-1">
           <ul class="list-inline mb-3">
@@ -417,7 +420,7 @@
             <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="projects.html">Projects</a></li>
             <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="blog.html">Blog</a></li>
           </ul>
-          <p class="small">Contact at <a class="btn-link text-white" href="mailto:hello@mogen.io">hello@mogen.io</a></p>
+          <p class="small">Contact at <a class="btn-link text-white" href="mailto:kida@tarkanmaki.com">kida@tarkanmaki.com</a></p>
         </div>
       </div>
     </div>
