--- a/portfolio/blog-details.html
+++ b/portfolio/blog-details.html
@@ -55,9 +55,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="services.html">Services</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
               </li>
@@ -231,24 +231,25 @@
 <!-- start of footer -->
 <footer>
   <div class="container bg-light-soft">
-    <div class="block" style="background-image:url(assets/images/footer-bg.jpg)">
+    <!-- <div class="block" style="background-image:url(assets/images/footer-bg.jpg)"> -->
+      <div class="block">
       <div class="row gx-0 gx-md-4 gy-4 justify-content-center">
         <div class="col-lg-5 text-center text-lg-start order-1 order-lg-0">
           <ul class="list-inline mb-3">
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Facebook</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Twitter</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Instagram</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="https://www.linkedin.com/in/kida-bohman/">LinkedIn</a></li>
+            <!-- <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Twitter</a></li> -->
+            <!-- <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Instagram</a></li> -->
           </ul>
-          <p class="small">&copy; Copyright, Riazz Mogen</p>
+          <!-- <p class="small">&copy; Copyright, Riazz Mogen</p> -->
         </div>
         <div class="col-lg-5 text-center text-lg-end order-0 order-lg-1">
           <ul class="list-inline mb-3">
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="about.html">About</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="services.html">Services</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="projects.html">Projects</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="blog.html">Blog</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="about.html">About</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="services.html">Services</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="projects.html">Projects</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="blog.html">Blog</a></li>
           </ul>
-          <p class="small">Contact at <a class="btn-link text-white" href="mailto:hello@mogen.io">hello@mogen.io</a></p>
+          <p class="small">Contact at <a class="btn-link" href="mailto:kida@tarkanmaki.com">kida@tarkanmaki.com</a></p>
         </div>
       </div>
     </div>
