--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -55,9 +55,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="services.html">Services</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
               </li>
@@ -110,7 +110,7 @@
               </div>
 
               <div class="rotate-circle">
-                <svg class="rotateOnScroll circle-text bg-dark" viewBox="0 0 460 460"><defs><path id="circle-button-text" d="M230,380 a150,150 0 0,1 0,-300a150,150 0 0,1 0,300Z"></path></defs><text class="text-uppercase" style="font-size:40px;letter-spacing:7px"><textPath fill="white" href="#circle-button-text">hello — I am mogen — about me — </textPath></text></svg>
+                <svg class="rotateOnScroll circle-text bg-dark" viewBox="0 0 460 460"><defs><path id="circle-button-text" d="M230,380 a150,150 0 0,1 0,-300a150,150 0 0,1 0,300Z"></path></defs><text class="text-uppercase" style="font-size:40px;letter-spacing:7px"><textPath fill="white" href="#circle-button-text">hello — I am Kida ♡ — about me — </textPath></text></svg>
               </div>
             </div>
           </div>
@@ -128,7 +128,8 @@
                 <h2 class="title h3 pt-3">Biography</h2>
               </div>
 
-              <p class="lead">For almost 5 years now, I have been creating web and mobile experiences and I have fun every day creating interactions in my interfaces. As a Digital Designer, I am here to make you stand out in the digital world. The combination of my passion for design and your vision will ensure a great end result.</p>
+              <p><strong>Versatile, dedicated & ambitious</strong>,</p>
+              <p>are the three words my friends have summed me up with, even if three words are definitely not enough to cover an entire personality :)</p>
 
               <div class="text-center mt-5"><a class="btn-link" href="#!"><svg class="me-2" width="24" height="24" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 20L18 20" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/><path d="M12 4V16M12 16L15.5 12.5M12 16L8.5 12.5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/></svg>Download Resume</a>
               </div>
@@ -285,24 +286,25 @@
 <!-- start of footer -->
 <footer>
   <div class="container bg-light-soft">
-    <div class="block" style="background-image:url(assets/images/footer-bg.jpg)">
+    <!-- <div class="block" style="background-image:url(assets/images/footer-bg.jpg)"> -->
+      <div class="block">
       <div class="row gx-0 gx-md-4 gy-4 justify-content-center">
         <div class="col-lg-5 text-center text-lg-start order-1 order-lg-0">
           <ul class="list-inline mb-3">
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Facebook</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Twitter</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Instagram</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="https://www.linkedin.com/in/kida-bohman/">LinkedIn</a></li>
+            <!-- <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Twitter</a></li> -->
+            <!-- <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Instagram</a></li> -->
           </ul>
-          <p class="small">&copy; Copyright, Riazz Mogen</p>
+          <!-- <p class="small">&copy; Copyright, Riazz Mogen</p> -->
         </div>
         <div class="col-lg-5 text-center text-lg-end order-0 order-lg-1">
           <ul class="list-inline mb-3">
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="about.html">About</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="services.html">Services</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="projects.html">Projects</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="blog.html">Blog</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="about.html">About</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="services.html">Services</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="projects.html">Projects</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="blog.html">Blog</a></li>
           </ul>
-          <p class="small">Contact at <a class="btn-link text-white" href="mailto:hello@mogen.io">hello@mogen.io</a></p>
+          <p class="small">Contact at <a class="btn-link" href="mailto:kida@tarkanmaki.com">kida@tarkanmaki.com</a></p>
         </div>
       </div>
     </div>
