--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -55,9 +55,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="services.html">Services</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
               </li>
