--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -55,9 +55,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="services.html">Services</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
               </li>
@@ -191,7 +191,7 @@
               </div>
             </div>
             <div class="col-lg-12 d-block d-xl-none">
-              <a class="btn mt-2" href="services.html">My Skills</a>
+              <a class="btn mt-2" href="about.html">Read more about me</a>
             </div>
           </div>
         </div>
@@ -227,13 +227,13 @@
                     </div>
                   </div>
                   <div class="swiper-slide">
-                    <div class="project-block" data-color="#fee3cd">
+                    <div class="project-block" data-color="#FDFBE7">
                       <div class="project-image rounded overflow-hidden">
-                        <img class="w-100 rounded" src="assets/images/projects/02.jpg" alt="">
+                        <img class="w-100 rounded" src="assets/images/projects/Bantaba.png" alt="">
                       </div>
                       <a class="project-content d-flex align-items-center justify-content-between mt-4 text-reset" href="project-single.html">
                         <div>
-                          <h3 class="mb-1">Lava</h3>
+                          <h3 class="mb-1">Bantaba's Platform</h3>
                           <p class="mb-0">Consectetur adipisicing elit. Hic, dolorum.</p>
                         </div>
                         <div class="icon ms-4">
@@ -403,11 +403,11 @@
 <footer>
   <div class="container bg-light-soft">
     <!-- <div class="block" style="background-image:url(assets/images/footer-bg.jpg)"> -->
-      <div class="block" style="background: #73B590;">
+      <div class="block">
       <div class="row gx-0 gx-md-4 gy-4 justify-content-center">
         <div class="col-lg-5 text-center text-lg-start order-1 order-lg-0">
           <ul class="list-inline mb-3">
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="https://www.linkedin.com/in/kida-bohman/">LinkedIn</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="https://www.linkedin.com/in/kida-bohman/">LinkedIn</a></li>
             <!-- <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Twitter</a></li> -->
             <!-- <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="#!">Instagram</a></li> -->
           </ul>
@@ -415,12 +415,12 @@
         </div>
         <div class="col-lg-5 text-center text-lg-end order-0 order-lg-1">
           <ul class="list-inline mb-3">
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="about.html">About</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="services.html">Services</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="projects.html">Projects</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial text-white" href="blog.html">Blog</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="about.html">About</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="services.html">Services</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="projects.html">Projects</a></li>
+            <li class="list-inline-item"><a class="text-hover-underline-initial" href="blog.html">Blog</a></li>
           </ul>
-          <p class="small">Contact at <a class="btn-link text-white" href="mailto:kida@tarkanmaki.com">kida@tarkanmaki.com</a></p>
+          <p class="small">Contact at <a class="btn-link" href="mailto:kida@tarkanmaki.com">kida@tarkanmaki.com</a></p>
         </div>
       </div>
     </div>
