--- a/portfolio/project-single.html
+++ b/portfolio/project-single.html
@@ -3,7 +3,7 @@
 
   <!-- meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
 
   <!-- title -->
   <title>Kida's Portfolio</title>
@@ -40,12 +40,12 @@
       <div class="col-12">
         <nav class="navbar navbar-expand-md px-0 py-3 py-lg-4">
           <!-- navbar logo -->
-          <a class="navbar-brand font-weight-bold mb-0" href="index.html" title="Mogen">
+          <a class="navbar-brand font-weight-bold mb-0" href="index.html" title="Kida">
             <!-- <img src="assets/images/logo.png" alt="Mogen"> -->Kida
           </a>
   
           <!-- navbar-toggler -->
-          <button class="navbar-toggler" type="button" data-toggle="navbar-menu">
+          <button class="navbar-toggler" type="button" data-toggle="navbar-menu" aria-label="navigation">
             <svg viewBox="0 0 341.333 341.333"> <g> <g> <rect y="277.333" width="341.333" height="42.667"/> </g> </g> <g> <g> <rect y="149.333" width="341.333" height="42.667"/> </g> </g> <g> <g> <rect y="21.333" width="341.333" height="42.667"/> </g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> </svg>
           </button>
             
