--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -144,7 +144,7 @@
           <div class="row g-5 justify-content-center">
             <div class="col-lg-4 col-10">
               <div class="about-image position-sticky pe-0 pe-lg-6">
-                <img class="img-fluid rounded-pill" src="assets/images/author.jpg" alt="author">
+                <img class="img-fluid rounded-pill" src="assets/images/kida_img.jpg" alt="author">
               </div>
             </div>
             <div class="col-lg-6 mt-0 mt-lg-5">
@@ -181,7 +181,7 @@
               <!-- end of education -->
               
               <!-- start of experience -->
-              <div>
+              <div class="section pt-lg-0">
 
                 <div class="section-title mb-5">
                   <h2 class="title h3">Education</h2>
@@ -213,7 +213,7 @@
               <!-- end of experience -->
 
               <!-- start of certificates -->
-              <div class="section pt-lg-0">
+              <div>
                 <div class="section-title mb-5">
                   <h2 class="title h3">Certificates</h2>
                 </div>
