--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -185,7 +185,7 @@
                         style="font-size: 38px; letter-spacing: 7px"
                       >
                         <textPath fill="white" href="#circle-button-text">
-                          All Recent Projects — Portfolio —
+                          Projects —Kida— Projects —Kida—
                         </textPath>
                       </text>
                     </svg>
@@ -339,7 +339,7 @@
                           class="project-content d-flex align-items-center justify-content-between mt-4"
                         >
                           <div>
-                            <h3 class="mb-1">Avatar</h3>
+                            <h3 class="mb-1">SL</h3>
                             <p class="mb-0">
                               We explored avatars that deviate from human form
                             </p>
@@ -399,7 +399,7 @@
                           class="project-content d-flex align-items-center justify-content-between mt-4"
                         >
                           <div>
-                            <h3 class="mb-1">Mark's Chocolate</h3>
+                            <h3 class="mb-1">EU-Bike</h3>
                             <p class="mb-0">
                               Consectetur adipisicing elit. Hic, dolorum.
                             </p>
