removed service and blog from footer

--- a/portfolio/blog-details.html
+++ b/portfolio/blog-details.html
@@ -460,13 +460,13 @@
                           >About</a
                         >
                       </li>
-                      <li class="list-inline-item">
+                      <!-- <li class="list-inline-item">
                         <a
                           class="text-hover-underline-initial"
                           href="services.html"
                           >Services</a
                         >
-                      </li>
+                      </li> -->
                       <li class="list-inline-item">
                         <a
                           class="text-hover-underline-initial"
@@ -474,11 +474,11 @@
                           >Projects</a
                         >
                       </li>
-                      <li class="list-inline-item">
+                      <!-- <li class="list-inline-item">
                         <a class="text-hover-underline-initial" href="blog.html"
                           >Blog</a
                         >
-                      </li>
+                      </li> -->
                     </ul>
                     <p class="small">
                       Contact at
