--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -211,6 +211,13 @@
                         <a class="btn-link-alt" href="#!">Dribbble</a>
                       </p>
                       <p><a class="btn-link-alt" href="#!">Behance</a></p>
+                      <p>
+                        <a
+                          class="btn-link-alt"
+                          href="https://www.linkedin.com/in/kida-bohman/"
+                          >LinkedIn</a
+                        >
+                      </p>
                     </div>
                     <div class="col-lg-4">
                       <div class="section-title mb-4">
@@ -218,24 +225,26 @@
                       </div>
 
                       <p class="mb-2">
-                        <a class="btn-link-alt" href="mailto:hello@mogen.io"
-                          >hello@mogen.io</a
+                        <a
+                          class="btn-link-alt"
+                          href="mailto:kida@tarkanmaki.com"
+                          >kida@tarkanmaki.com</a
                         >
                       </p>
-                      <p>
+                      <!-- <p>
                         <a class="btn-link-alt" href="tel:+31869235"
                           >+31 6 869 235</a
                         >
-                      </p>
+                      </p> -->
                     </div>
-                    <div class="col-lg-4">
+                    <!-- <div class="col-lg-4">
                       <div class="section-title mb-4">
                         <h2 class="title h3">Business Details</h2>
                       </div>
 
                       <p class="mb-2">CoC: 56971536</p>
                       <p>VAT: FR006953208D08</p>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -361,13 +370,13 @@
                           >About</a
                         >
                       </li>
-                      <li class="list-inline-item">
+                      <!-- <li class="list-inline-item">
                         <a
                           class="text-hover-underline-initial"
                           href="services.html"
                           >Services</a
                         >
-                      </li>
+                      </li> -->
                       <li class="list-inline-item">
                         <a
                           class="text-hover-underline-initial"
