--- a/portfolio/project-single.html
+++ b/portfolio/project-single.html
@@ -256,9 +256,9 @@
         <div class="col-lg-5 text-center text-lg-end order-0 order-lg-1">
           <ul class="list-inline mb-3">
             <li class="list-inline-item"><a class="text-hover-underline-initial" href="about.html">About</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial" href="services.html">Services</a></li>
+            <!-- <li class="list-inline-item"><a class="text-hover-underline-initial" href="services.html">Services</a></li> -->
             <li class="list-inline-item"><a class="text-hover-underline-initial" href="projects.html">Projects</a></li>
-            <li class="list-inline-item"><a class="text-hover-underline-initial" href="blog.html">Blog</a></li>
+            <!-- <li class="list-inline-item"><a class="text-hover-underline-initial" href="blog.html">Blog</a></li> -->
           </ul>
           <p class="small">Contact at <a class="btn-link" href="mailto:kida@tarkanmaki.com">kida@tarkanmaki.com</a></p>
         </div>
