--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -371,7 +371,7 @@
                   <div class="swiper swiper-projects">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide">
-                        <div class="project-block" data-color="#E8FCF0">
+                        <div class="project-block" data-color="#B1E0C2">
                           <div class="project-image rounded overflow-hidden">
                             <img
                               class="w-100 rounded"
@@ -428,7 +428,7 @@
                         </div>
                       </div>
                       <div class="swiper-slide">
-                        <div class="project-block" data-color="#FDFBE7">
+                        <div class="project-block" data-color="#FFE790">
                           <div class="project-image rounded overflow-hidden">
                             <img
                               class="w-100 rounded"
@@ -485,7 +485,7 @@
                         </div>
                       </div>
                       <div class="swiper-slide">
-                        <div class="project-block" data-color="#d6dcf5">
+                        <div class="project-block" data-color="#9DD1EF">
                           <div class="project-image rounded overflow-hidden">
                             <img
                               class="w-100 rounded"
@@ -498,7 +498,7 @@
                             href="project-single.html"
                           >
                             <div>
-                              <h3 class="mb-1">Avatar</h3>
+                              <h3 class="mb-1">SL</h3>
                               <p class="mb-0">
                                 We explored avatars that deviate from human form
                               </p>
@@ -542,7 +542,7 @@
                         </div>
                       </div>
                       <div class="swiper-slide">
-                        <div class="project-block" data-color="#feeecd">
+                        <div class="project-block" data-color="#00918D">
                           <div class="project-image rounded overflow-hidden">
                             <img
                               class="w-100 rounded"
@@ -555,7 +555,7 @@
                             href="project-single.html"
                           >
                             <div>
-                              <h3 class="mb-1">Mark's Chocolate</h3>
+                              <h3 class="mb-1">EU-Bike</h3>
                               <p class="mb-0">
                                 Consectetur adipisicing elit. Hic, dolorum.
                               </p>
