--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -325,7 +325,7 @@
                     <div class="col-md-6">
                       <a
                         class="project-block d-block text-reset"
-                        data-color="#d6dcf5"
+                        data-color="#9DD1EF"
                         href="project-single.html"
                       >
                         <div class="project-image rounded overflow-hidden">
@@ -385,7 +385,7 @@
                     <div class="col-md-6">
                       <a
                         class="project-block d-block text-reset"
-                        data-color="#feeecd"
+                        data-color="#00918D"
                         href="project-single.html"
                       >
                         <div class="project-image rounded overflow-hidden">
