--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -371,11 +371,11 @@
                   <div class="swiper swiper-projects">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide">
-                        <div class="project-block" data-color="#B1E0C2">
+                        <div class="project-block" data-color="#FDFBE6">
                           <div class="project-image rounded overflow-hidden">
                             <img
                               class="w-100 rounded"
-                              src="assets/images/projects/Bantaba.png"
+                              src="assets/images/projects/BantabaLandingPage.svg"
                               alt="Cover"
                             />
                           </div>
@@ -428,7 +428,7 @@
                         </div>
                       </div>
                       <div class="swiper-slide">
-                        <div class="project-block" data-color="#FFE790">
+                        <div class="project-block" data-color="#B1E0C2">
                           <div class="project-image rounded overflow-hidden">
                             <img
                               class="w-100 rounded"
@@ -598,7 +598,7 @@
                           </a>
                         </div>
                       </div>
-                      <div class="swiper-slide">
+                      <!-- <div class="swiper-slide">
                         <div class="project-block" data-color="#f8d3d4">
                           <div class="project-image rounded overflow-hidden">
                             <img
@@ -654,8 +654,8 @@
                             </div>
                           </a>
                         </div>
-                      </div>
-                      <div class="swiper-slide">
+                      </div> -->
+                      <!-- <div class="swiper-slide">
                         <div class="project-block" data-color="#d8f3e6">
                           <div class="project-image rounded overflow-hidden">
                             <img
@@ -711,7 +711,7 @@
                             </div>
                           </a>
                         </div>
-                      </div>
+                      </div> -->
                     </div>
                     <div class="swiper-project-controls">
                       <!-- pagination -->
