--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -205,13 +205,13 @@
                     <div class="col-md-6">
                       <a
                         class="project-block d-block text-reset"
-                        data-color="#E8FCF0"
+                        data-color="#FDFBE6"
                         href="bantaba-landingPage.html"
                       >
                         <div class="project-image rounded overflow-hidden">
                           <img
                             class="w-100 rounded"
-                            src="assets/images/projects/Bantaba.png"
+                            src="assets/images/projects/BantabaLandingPage.svg"
                             alt="#"
                           />
                         </div>
@@ -265,7 +265,7 @@
                     <div class="col-md-6">
                       <a
                         class="project-block d-block text-reset"
-                        data-color="#FDFBE7"
+                        data-color="#B1E0C2"
                         href="project-single.html"
                       >
                         <div class="project-image rounded overflow-hidden">
