--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -331,7 +331,7 @@
                         <div class="project-image rounded overflow-hidden">
                           <img
                             class="w-100 rounded"
-                            src="assets/images/projects/03.jpg"
+                            src="assets/images/projects/SL.svg"
                             alt=""
                           />
                         </div>
@@ -442,7 +442,7 @@
                         </div>
                       </a>
                     </div>
-                    <div class="col-md-6">
+                    <!-- <div class="col-md-6">
                       <a
                         class="project-block d-block text-reset"
                         data-color="#f8d3d4"
@@ -501,8 +501,8 @@
                           </div>
                         </div>
                       </a>
-                    </div>
-                    <div class="col-md-6">
+                    </div> -->
+                    <!-- <div class="col-md-6">
                       <a
                         class="project-block d-block text-reset"
                         data-color="#d8f3e6"
@@ -561,7 +561,7 @@
                           </div>
                         </div>
                       </a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
