--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -489,7 +489,7 @@
                           <div class="project-image rounded overflow-hidden">
                             <img
                               class="w-100 rounded"
-                              src="assets/images/projects/03.jpg"
+                              src="assets/images/projects/SL.svg"
                               alt=""
                             />
                           </div>
