--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -184,7 +184,7 @@
               <div class="row justify-content-center gy-4 gx-6">
                 <div class="col-xl-5 col-lg-8">
                   <div class="section-title mb-4">
-                    <h2 class="title">How can I help you?</h2>
+                    <h2 class="title">Are you looking for a designer?</h2>
                   </div>
                   <p class="lead">
                     I strive to design clean looking applications that are easy
