--- a/portfolio/bantaba-landingPage.html
+++ b/portfolio/bantaba-landingPage.html
@@ -267,6 +267,9 @@
                                         <br/>
                                     <h5><strong>... and the result?</strong></h5>
                                     <p>Check it out live at <a href="ourbantaba.com">Bantaba's website!</a></p>
+                                   
+
+                                    <!-- <center><img class=" src="assets/images/projects/landingPage_phoneMockup.png" alt="Landing page."></center> -->
                                 </div>
                             </div>
                         </div>
