--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -386,7 +386,7 @@
                             <div>
                               <h3 class="mb-1">Bantaba's Landing Page</h3>
                               <p class="mb-0">
-                                Consectetur adipisicing elitic dolorum
+                                Giving Bantaba a new, fresh look.
                               </p>
                             </div>
                             <div class="icon ms-4">
@@ -438,12 +438,13 @@
                           </div>
                           <a
                             class="project-content d-flex align-items-center justify-content-between mt-4 text-reset"
-                            href="project-single.html"
+                            href="#"
                           >
                             <div>
                               <h3 class="mb-1">Bantaba's Platform</h3>
                               <p class="mb-0">
-                                Consectetur adipisicing elit. Hic, dolorum.
+                                I tackled the difficult question of "How do we
+                                improve the UX of the platform?"
                               </p>
                             </div>
                             <div class="icon ms-4">
@@ -495,13 +496,11 @@
                           </div>
                           <a
                             class="project-content d-flex align-items-center justify-content-between mt-4 text-reset"
-                            href="project-single.html"
+                            href="#"
                           >
                             <div>
                               <h3 class="mb-1">SL</h3>
-                              <p class="mb-0">
-                                We explored avatars that deviate from human form
-                              </p>
+                              <p class="mb-0">Text</p>
                             </div>
                             <div class="icon ms-4">
                               <svg
@@ -552,13 +551,11 @@
                           </div>
                           <a
                             class="project-content d-flex align-items-center justify-content-between mt-4 text-reset"
-                            href="project-single.html"
+                            href="#"
                           >
                             <div>
                               <h3 class="mb-1">EU-Bike</h3>
-                              <p class="mb-0">
-                                Consectetur adipisicing elit. Hic, dolorum.
-                              </p>
+                              <p class="mb-0">Text</p>
                             </div>
                             <div class="icon ms-4">
                               <svg
