--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -221,7 +221,7 @@
                           <div>
                             <h3 class="mb-1">Bantaba's Landing Page</h3>
                             <p class="mb-0">
-                              Consectetur adipisicing elitic dolorum
+                              Giving Bantaba a new, fresh look.
                             </p>
                           </div>
                           <div class="icon ms-4">
@@ -281,7 +281,8 @@
                           <div>
                             <h3 class="mb-1">Bantaba's Platform</h3>
                             <p class="mb-0">
-                              Consectetur adipisicing elit. Hic, dolorum.
+                              I tackled on the difficult question of "How do we
+                              improve the UX of the platform?"
                             </p>
                           </div>
                           <div class="icon ms-4">
@@ -326,7 +327,7 @@
                       <a
                         class="project-block d-block text-reset"
                         data-color="#9DD1EF"
-                        href="project-single.html"
+                        href="#"
                       >
                         <div class="project-image rounded overflow-hidden">
                           <img
@@ -340,9 +341,7 @@
                         >
                           <div>
                             <h3 class="mb-1">SL</h3>
-                            <p class="mb-0">
-                              We explored avatars that deviate from human form
-                            </p>
+                            <p class="mb-0">Text</p>
                           </div>
                           <div class="icon ms-4">
                             <svg
