--- a/portfolio/bantaba-landingPage.html
+++ b/portfolio/bantaba-landingPage.html
@@ -246,17 +246,24 @@
                                     <h5><strong>Wireframing</strong></h5>
                                     <p>Once we were satisfied and knew what we wanted to include, I made a wireframe while the content strategist wrote all of the content. I used the websites I had looked at before as inspiration when I puzzled together boxes that’d represent the future content.</p>
                                     <br/>
-                                    <div class="row mt-5 mb-0">                                      
-                                        <div class="col-lg-4">
-                                            <img class="w-100 rounded mb-8" loading="lazy" src="assets/images/projects/01.jpg">                                         
-                                        </div>           
-                                        <div class="col-lg-4">
+                                    <!-- <div class="row mt-5 mb-0">                                       -->
+                                        <!-- <div class="col-lg-4"> -->
+                                            <img class="w-75 rounded mb-8 mx-auto d-block" loading="lazy" src="assets/images/projects/LandingPageDefault.svg">                                         
+                                        <!-- </div>            -->
+                                        <!-- <div class="col-lg-4">
                                             <img class="w-100 rounded mb-8" loading="lazy" src="assets/images/projects/01.jpg"> 
                                         </div>
                                         <div class="col-lg-4">
                                             <img class="w-100 rounded mb-8" loading="lazy" src="assets/images/projects/01.jpg"> 
-                                        </div>
-                                    </div> 
+                                        </div> -->
+                                    <!-- </div>  -->
+                                    
+                                    <h5><strong>MORE STUFF HERE</strong></h5>
+                                    <p>moreeee</p>
+                                    <img class="w-50 rounded mb-8 mx-auto d-block" loading="lazy" src="assets/images/projects/LandingPageFAQBlog.svg">                                         
+
+
+
                                     <h5><strong>Difficulties</strong></h5>
                                     <p>More often than not, startups need to develop quickly.Because of this, Bantaba hired a second designer to design the desktop version. Unfortunately, the timing wasn’t ideal and the designer finished the desktop landing page while I was on a holiday, and the lack of communication between us caused the desktop version to differ a good bit from the mobile. <br/><br/>
 
@@ -266,8 +273,9 @@
                                         </p>
                                         <br/>
                                     <h5><strong>... and the result?</strong></h5>
-                                    <p>Check it out live at <a href="ourbantaba.com">Bantaba's website!</a></p>
-                                   
+                                    <p>Check it out live at <a href="ourbantaba.com">Bantaba's website!</a></p><br/> 
+                                    <img class="w-100 rounded mb-8" loading="lazy" src="assets/images/projects/LandingPagePhones.svg"> 
+
 
                                     <!-- <center><img class=" src="assets/images/projects/landingPage_phoneMockup.png" alt="Landing page."></center> -->
                                 </div>
@@ -289,14 +297,14 @@
                         </div>
                         <div class="row g-5 justify-content-center project-page">
                             <div class="col-md-5">
-                                <a class="project-block d-block text-reset" data-color="#f8d3d4" href="#!">
+                                <a class="project-block d-block text-reset" data-color="#B1E0C2" href="#!">
                                     <div class="project-image rounded overflow-hidden">
-                                        <img class="w-100 rounded" src="assets/images/projects/05.jpg" alt="">
+                                        <img class="w-100 rounded" src="assets/images/projects/Bantaba.png" alt="Mockups of the platform">
                                     </div>
                                     <div class="project-content d-flex align-items-center justify-content-between mt-4">
                                         <div>
                                             <h3 class="mb-1">Bantaba's Platform</h3>
-                                            <p class="mb-0">Sol Mexican Grill is a Mexican restaurant</p>
+                                            <p class="mb-0">I tackled the difficult question of "How do we improve the UX of the platform?</p>
                                         </div>
                                         <div class="icon ms-4">
                                             <svg width="26px" height="18px" viewBox="0 0 26 18" version="1.1"
@@ -321,14 +329,14 @@
                                 </a>
                             </div>
                             <div class="col-md-5">
-                                <a class="project-block d-block text-reset" data-color="#d8f3e6" href="#!">
+                                <a class="project-block d-block text-reset" data-color="#9DD1EF" href="#!">
                                     <div class="project-image rounded overflow-hidden">
-                                        <img class="w-100 rounded" src="assets/images/projects/06.jpg" alt="">
+                                        <img class="w-100 rounded" src="assets/images/projects/SL.svg" alt="">
                                     </div>
                                     <div class="project-content d-flex align-items-center justify-content-between mt-4">
                                         <div>
                                             <h3 class="mb-1">SL</h3>
-                                            <p class="mb-0">It is a skincare brand based in Canada</p>
+                                            <p class="mb-0">Text</p>
                                         </div>
                                         <div class="icon ms-4">
                                             <svg width="26px" height="18px" viewBox="0 0 26 18" version="1.1"
