--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -191,7 +191,7 @@
                     to use and accessible for everyone.
                   </p>
                   <div class="mt-5 d-none d-xl-block">
-                    <a class="btn" href="services.html">Services</a>
+                    <a class="btn" href="about.html">Read more about me</a>
                   </div>
                 </div>
                 <div class="col-xl-5">
@@ -906,7 +906,13 @@
                           >About</a
                         >
                       </li>
-                      <!-- <li class="list-inline-item"><a class="text-hover-underline-initial" href="services.html">Services</a></li> -->
+                      <li class="list-inline-item">
+                        <a
+                          class="text-hover-underline-initial"
+                          href="about.html"
+                          >Read more about me</a
+                        >
+                      </li>
                       <li class="list-inline-item">
                         <a
                           class="text-hover-underline-initial"
