--- a/portfolio/project-single.html
+++ b/portfolio/project-single.html
@@ -61,9 +61,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="blog.html">Blog</a>
-              </li>
+              </li> -->
             </ul>
             <ul class="navbar-nav mt-3 mt-md-0">
               <li class="nav-item">
