--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -266,7 +266,7 @@
                       <a
                         class="project-block d-block text-reset"
                         data-color="#B1E0C2"
-                        href="project-single.html"
+                        href="#"
                       >
                         <div class="project-image rounded overflow-hidden">
                           <img
@@ -385,7 +385,7 @@
                       <a
                         class="project-block d-block text-reset"
                         data-color="#00918D"
-                        href="project-single.html"
+                        href="#"
                       >
                         <div class="project-image rounded overflow-hidden">
                           <img
